--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -3,12 +3,14 @@
     {% if page.title == "Home" %}
     <h3 class="fw-bold border-bottom pb-3 mb-5">Recent Publications/Preprint</h3>
       {% for item in site.data.publications.featured %}
-        <p><a href="{{ item.url }}">{{ item.name }}</a></p>
+        <li>{{ item.name }} <a href="{{ item.url }}">{{ item.url }}</a></li>
+        <p> </p>
       {% endfor %}
     {% else %}
     <h3 class="fw-bold border-bottom pb-3 mb-5">Publications</h3>
       {% for item in site.data.publications.index %}
-        <p><a href="{{ item.url }}">{{ item.name }}</a></p>
+        <li>{{ item.name }} <a href="{{ item.url }}">{{ item.url }}</a></li>
+        <p> </p>
       {% endfor %}
     {% endif %}
   </div>
