--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,6 +12,9 @@ layout: default
   </div>
 </div>
 
+
+<div class="row g-5 mb-5">
+    <h3 class="fw-bold border-bottom pb-3 mb-5">Posts</h3>
 <div class="posts">
   {% for post in site.posts %}
     <article class="post">
@@ -19,12 +22,12 @@ layout: default
       <h3><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h3>
 
       <div class="entry">
-        {{ post.excerpt }}
-      </div>
-
+        {{ post.excerpt | truncatewords: 10}}
       <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
+      </div>
     </article>
   {% endfor %}
+</div>
 </div>
 
 {% include updates.html %}
