--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -3,13 +3,17 @@
     {% if page.title == "Home" %}
     <h3 class="fw-bold border-bottom pb-3 mb-5">Recent Publications/Preprint</h3>
       {% for item in site.data.publications.featured %}
-        <li>{{ item.name }} <a href="{{ item.url }}">{{ item.url }}</a></li>
+        <li>{{ item.name }} <a href="{{ item.url }}">{{ item.url }}</a><a href="{{ item.download }}" download="file.pdf">
+          <button>Download File</button>
+      </a></li>
         <p> </p>
       {% endfor %}
     {% else %}
     <h3 class="fw-bold border-bottom pb-3 mb-5">Publications</h3>
       {% for item in site.data.publications.index %}
-        <li>{{ item.name }} <a href="{{ item.url }}">{{ item.url }}</a></li>
+        <li>{{ item.name }} <a href="{{ item.url }}">{{ item.url }}</a><a href="{{ item.download }}" download="file.pdf">
+          <button>Download File</button>
+      </a></li>
         <p> </p>
       {% endfor %}
     {% endif %}
